--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^3.1",
         "bezhansalleh/filament-shield": "3.2.6",
-        "filament/actions": "^3.0",
+        "filament/actions": "3.2.131",
         "filament/filament": "^3.2",
         "filament/widgets": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
