--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^3.1",
-        "bezhansalleh/filament-shield": "3.2.6",
+        "bezhansalleh/filament-shield": "3.2.4",
         "filament/actions": "3.2.131",
         "filament/filament": "^3.2",
         "filament/widgets": "^3.2",
@@ -18,7 +18,8 @@
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "midtrans/midtrans-php": "^2.6",
-        "spatie/simple-excel": "^3.7"
+        "spatie/simple-excel": "^3.7",
+        "tomatophp/filament-payments": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
